# unity-mcp

./: .gitignore  README.md  main.py  pyproject.toml
assets/UnityMCP/: README.md  package.json
assets/UnityMCP/Documentation/: Architecture.md  CommandReference.md  QuickStart.md  SubsystemReference.md  assistant.md  index.md
assets/UnityMCP/Editor/: DocGenerator.cs  UnityMCPEditor.cs
assets/UnityMCP/Python/: batch_operations.py  batch_tools.py  connection.py  error_reporter.py  setup.py  unity_mcp_server.py
assets/UnityMCP/Python/core/: __init__.py  command_handler.py  config.py  error_reporter.py  tool_registry.py
assets/UnityMCP/Python/tools/: __init__.py  animation_tools.py  asset_tools.py  camera_tools.py  lighting_tools.py  material_tools.py  object_tools.py  utility_tools.py
assets/UnityMCP/Scripts/AssetIntegration/: AssetDownloader.cs
assets/UnityMCP/Scripts/Commands/: CoreCommandHandler.cs  CreateObjectCommand.cs  MaterialCommand.cs  MaterialCommandHandler.cs  ModifyObjectCommand.cs  ObjectCommandHandler.cs  SceneCommandHandler.cs
assets/UnityMCP/Scripts/Core/: CommandHandler.cs  JsonUtility.cs  UnityMCPAssistant.cs  UnityMCPBrain.cs  UnityMCPContext.cs  UnityMCPHistory.cs  UnityMCPServer.cs  UnityThreadDispatcher.cs
assets/UnityMCP/Scripts/Network/: UnityMCPSocketClient.cs
assets/UnityMCP/Scripts/Subsystems/: AnimationSubsystem.cs  AssetStoreSubsystem.cs  AsyncCommandSubsystem.cs  BatchSubsystem.cs  CameraSubsystem.cs  LightingSubsystem.cs  PrefabSubsystem.cs  TelemetrySubsystem.cs
(+1 files in other folders)
