[project]
name = "unity-mcp"
version = "1.0.0"
description = "Unity integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
unity-mcp = "unity_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "Assets/UnityMCP/Python"}

[project.urls]
"Homepage" = "https://github.com/yourusername/unity-mcp"
"Bug Tracker" = "https://github.com/yourusername/unity-mcp/issues"
